Massive clean up. And deprecation removal